--- a/Client/Pages/ManufacturesPage.xaml
+++ b/Client/Pages/ManufacturesPage.xaml
@@ -15,8 +15,9 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <usercontrols:ToolBarControl AddClick="ToolBarControl_AddClick" DeleteClick="ToolBarControl_DeleteClick" SaveClick="ToolBarControl_SaveClick" UpdateClick="ToolBarControl_UpdateClick"/>
@@ -24,7 +25,7 @@
         <DataGrid ItemsSource="{Binding ManufList}"
                   AutoGenerateColumns="False" Grid.Row="1" x:Name="datagridManufs" RowHeaderWidth="70">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Наим" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="Наим" Binding="{Binding Name}" Width="*"/>
             </DataGrid.Columns>
 
             <DataGrid.RowHeaderTemplate>
